--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Oswald:300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Hi, I'm Gustav. I'm a Web Developer & Designer!" />
 
